updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a 28-year-old graphic designer who would like to learn about web development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Strongsville, OH</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Recording music, reading, watching movies</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I am not sure</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Lakewood, OH</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I like to take information and make something that looks nice out of it.</p>
     </section>
 
     <footer id="footer">
